# rantools

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
config/: settings.py  urls.py
network_vs_atoll/: apps.py  tests.py  views.py
network_vs_atoll/reports/: README.md
network_vs_atoll/src/: excel.py  main.py
network_vs_atoll/src/gsm/: atoll_handler.py  gsm_main.py  gsm_select.py  network_handler.py
network_vs_atoll/src/lte/: atoll_handler.py  lte_main.py  lte_select.py
network_vs_atoll/src/nr5g/: atoll_handler.py  nr_main.py  nr_select.py
network_vs_atoll/src/wcdma/: atoll_handler.py  netwrok_handler.py  wcdma_main.py  wcdma_select.py
sites_count/: forms.py  tests.py  views.py
sites_count/src/: handler.py  main.py  select_by_operators.py  select_by_regions.py  select_by_vendors.py  select_sites.py
static/css/: main.css
templates/: layout.html
templates/network_vs_atoll/: nva_index.html
templates/sites_count/: sites_count.html
utils/: atoll.py
