[tool.poetry]
name = "rantools"
version = "0.1.0"
description = ""
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.1"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.1"
django-bootstrap5 = "^23.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
cx-Oracle = "^8.3.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
ipython = "^8.13.2"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
